--- a/data_explore.ipynb
+++ b/data_explore.ipynb
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "230           2      False  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
        "781       44       55     56           6      False  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1085,9 +1085,13 @@
        "      <th></th>\n",
        "      <th>First_pokemon</th>\n",
        "      <th>Second_pokemon</th>\n",
+       "      <th>Total_fights</th>\n",
+       "      <th>Win_percentage</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Winner</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -1097,42 +1101,52 @@
        "      <th>1</th>\n",
        "      <td>37</td>\n",
        "      <td>37</td>\n",
+       "      <td>133</td>\n",
+       "      <td>0.278195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>46</td>\n",
        "      <td>46</td>\n",
+       "      <td>121</td>\n",
+       "      <td>0.380165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>89</td>\n",
        "      <td>89</td>\n",
+       "      <td>132</td>\n",
+       "      <td>0.674242</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>70</td>\n",
        "      <td>70</td>\n",
+       "      <td>125</td>\n",
+       "      <td>0.560000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>55</td>\n",
        "      <td>55</td>\n",
+       "      <td>112</td>\n",
+       "      <td>0.491071</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        First_pokemon  Second_pokemon\n",
-       "Winner                               \n",
-       "1                  37              37\n",
-       "2                  46              46\n",
-       "3                  89              89\n",
-       "4                  70              70\n",
-       "5                  55              55"
+       "        First_pokemon  Second_pokemon  Total_fights  Win_percentage\n",
+       "Winner                                                             \n",
+       "1                  37              37           133        0.278195\n",
+       "2                  46              46           121        0.380165\n",
+       "3                  89              89           132        0.674242\n",
+       "4                  70              70           125        0.560000\n",
+       "5                  55              55           112        0.491071"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1175,7 @@
        "(783, 16)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
