added data point list + centroid

--- a/KMeans.ipynb
+++ b/KMeans.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,12 +324,16 @@
     "        new_centroids = {}\n",
     "        t = []\n",
     "        for i in range(k):\n",
-    "            print('Cluster is:' + str(i))\n",
+    "            #print('Cluster is:' + str(i))\n",
     "            for j in range(len(points)):\n",
     "                if i == cluster[j]['centroid']:\n",
     "                    t.append([points[j][0], points[j][1], points[j][2], points[j][3], cluster[j]['centroid'] ])\n",
-    "        print(t)\n",
-    "        print('------------------- \\n')\n",
+    "        \n",
+    "        # Get mean from every centroid\n",
+    "        \n",
+    "        \n",
+    "    print(t)\n",
+    "    print('------------------- \\n')\n",
     "        \n",
     "    return cluster"
    ]
@@ -369,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 593,
    "metadata": {
     "scrolled": false
    },
@@ -391,16 +395,6 @@
       "Cluster: 1 , distance: 112.08925015361643\n",
       "Cluster: 2 , distance: 150.2165104108067\n",
       "Cluster: 2 , distance: 132.09844813622905\n",
-      "Cluster is:0\n",
-      "------------------- \n",
-      "\n",
-      "Cluster is:1\n",
-      "------------------- \n",
-      "\n",
-      "Cluster is:2\n",
-      "------------------- \n",
-      "\n",
-      "[[80, 100, 123, 'Mega Venusaur', 0], [78, 130, 111, 'Mega Charizard X', 0], [78, 104, 78, 'Mega Charizard Y', 1], [60, 62, 63, 'Ivysaur', 2], [80, 82, 83, 'Venusaur', 2], [39, 52, 43, 'Charmander', 2], [58, 64, 58, 'Charmeleon', 2], [78, 84, 78, 'Charizard', 2], [44, 48, 65, 'Squirtle', 2], [59, 63, 80, 'Wartortle', 2]]\n",
       "\n",
       "Iteration: 1\n",
       "Cluster: 2 , distance: 132.33669181296622\n",
@@ -413,16 +407,6 @@
       "Cluster: 1 , distance: 112.08925015361643\n",
       "Cluster: 2 , distance: 150.2165104108067\n",
       "Cluster: 2 , distance: 132.09844813622905\n",
-      "Cluster is:0\n",
-      "------------------- \n",
-      "\n",
-      "Cluster is:1\n",
-      "------------------- \n",
-      "\n",
-      "Cluster is:2\n",
-      "------------------- \n",
-      "\n",
-      "[[80, 100, 123, 'Mega Venusaur', 0], [78, 130, 111, 'Mega Charizard X', 0], [78, 104, 78, 'Mega Charizard Y', 1], [60, 62, 63, 'Ivysaur', 2], [80, 82, 83, 'Venusaur', 2], [39, 52, 43, 'Charmander', 2], [58, 64, 58, 'Charmeleon', 2], [78, 84, 78, 'Charizard', 2], [44, 48, 65, 'Squirtle', 2], [59, 63, 80, 'Wartortle', 2]]\n",
       "\n",
       "Iteration: 2\n",
       "Cluster: 2 , distance: 132.33669181296622\n",
@@ -435,16 +419,9 @@
       "Cluster: 1 , distance: 112.08925015361643\n",
       "Cluster: 2 , distance: 150.2165104108067\n",
       "Cluster: 2 , distance: 132.09844813622905\n",
-      "Cluster is:0\n",
+      "[[80, 100, 123, 'Mega Venusaur', 0], [78, 130, 111, 'Mega Charizard X', 0], [78, 104, 78, 'Mega Charizard Y', 1], [60, 62, 63, 'Ivysaur', 2], [80, 82, 83, 'Venusaur', 2], [39, 52, 43, 'Charmander', 2], [58, 64, 58, 'Charmeleon', 2], [78, 84, 78, 'Charizard', 2], [44, 48, 65, 'Squirtle', 2], [59, 63, 80, 'Wartortle', 2]]\n",
       "------------------- \n",
-      "\n",
-      "Cluster is:1\n",
-      "------------------- \n",
-      "\n",
-      "Cluster is:2\n",
-      "------------------- \n",
-      "\n",
-      "[[80, 100, 123, 'Mega Venusaur', 0], [78, 130, 111, 'Mega Charizard X', 0], [78, 104, 78, 'Mega Charizard Y', 1], [60, 62, 63, 'Ivysaur', 2], [80, 82, 83, 'Venusaur', 2], [39, 52, 43, 'Charmander', 2], [58, 64, 58, 'Charmeleon', 2], [78, 84, 78, 'Charizard', 2], [44, 48, 65, 'Squirtle', 2], [59, 63, 80, 'Wartortle', 2]]\n"
+      "\n"
      ]
     }
    ],
