neurel network 12 features, cleanup

--- a/neural_network_predictor.ipynb
+++ b/neural_network_predictor.ipynb
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1139,6 +1139,27 @@
       ]
      },
      "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.75432051, -0.4625508 , -0.76650973,  0.03575944, -0.27874704,\n",
+       "       -1.08140504])"
+      ]
+     },
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,6 +1482,32 @@
     "# confusion matrix\n",
     "confusion = metrics.confusion_matrix(y_test, predictions)\n",
     "print(confusion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = y_test[y_test == 1] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5233\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(r))"
    ]
   },
   {
